--- a/Clint/src/assets/Components/UserLogin/UserLogin.css
+++ b/Clint/src/assets/Components/UserLogin/UserLogin.css
@@ -1,8 +1,8 @@
 .simple-login-form {
-    width: 350px;
+    width: 280px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #f5f5f5;
+    background-color: #e2dfdf;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     font-family: Arial, sans-serif;
@@ -37,7 +37,7 @@
   }
   
   .simple-login-form button {
-    width: 100%;
+    width: 80%;
     padding: 10px;
     font-weight: bold;
     border: none;
@@ -57,3 +57,9 @@
     margin-top: 5px;
   }
   
+  h2,label,p{
+    color: #333;
+  }
+  span:hover{
+  color: #0056b3;
+  }
