signup with profile pic added

--- a/Clint/src/assets/Components/UserRegister/UserRegister.css
+++ b/Clint/src/assets/Components/UserRegister/UserRegister.css
@@ -2,7 +2,7 @@
     width: 300px;
     margin: auto;
     padding: 20px;
-    background-color: #e2dfdf;
+    background-color: #6093a0;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
