--- a/Clint/src/assets/Components/UserLogin/UserLogin.css
+++ b/Clint/src/assets/Components/UserLogin/UserLogin.css
@@ -2,7 +2,7 @@
     width: 280px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #e2dfdf;
+    background-color: #6093a0;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     font-family: Arial, sans-serif;
