--- a/Clint/src/assets/Components/UserEdit/UserEdit.css
+++ b/Clint/src/assets/Components/UserEdit/UserEdit.css
@@ -1,6 +1,6 @@
 /* Container for the form */
 .simple-register-form {
-    max-width: 400px;
+    max-width: 65%;
     margin: 50px auto;
     padding: 20px;
     border: 1px solid #ddd;
